--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -106,7 +106,7 @@
       background: rgba(143,225,255,.1);
       cursor: pointer;
     }
-    &.ghost{  
+    &.ghost{
       opacity: .6;
       color:#fff;
       background: #409EFF !important;
@@ -181,7 +181,7 @@
     transform-origin: 0 0;
     position: relative;
   }
-  
+
   .grade {
     width: 100%;
     height: 100%;
@@ -193,7 +193,7 @@
     left: 0;
     right: 0;
   }
-  
+
   .title {
     padding:0 20px;
     box-sizing: border-box;
@@ -210,17 +210,17 @@
       text-align: left;
     }
   }
-  
+
   .params {
     width: 350px;
   }
-  
-  
-  
-  
-  
-  
-  
+
+
+
+
+
+
+
   .tabs{
     margin-top: -10px;
     box-sizing: border-box;
@@ -238,7 +238,7 @@
   }
   .tabs .is-active i{
     color: #409EFF;
-   
+
   }
   .tabs .el-tabs__nav-wrap::after{
     background: #27343e;
@@ -250,7 +250,7 @@
   .tabs .el-tabs__active-bar{
     top:0;
   }
-  
+
   .el-collapse-item__header{
     padding-left: 30px;
   }
@@ -289,7 +289,7 @@
     width: 100px;
     height: 100px;
     margin: 20px 10px ;
-  }  
+  }
   .el-input-number__decrease, .el-input-number__increase{
     background: transparent;
   }
@@ -302,4 +302,19 @@
   .wrapper{
     overflow: hidden;
   }
+}
+.login-container {
+  display: flex;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  background-size: 100% 100%;
+}
+.login-border {
+  position: relative;
+  min-height: 500px;
+  align-items: center;
+  display: flex;
 }
