--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -189,7 +189,7 @@ input{
 .el-checkbox__inner,input,.el-slider__runway,textarea,
 .el-dialog input,.el-switch__core,.el-dialog .el-slider__runway,.el-dialog textarea{
   background-color: #0f1014 !important;
-  color:#859094 !important;
+  color:white !important;
   border-color:#282e3a !important;
 }
 .el-switch.is-checked .el-switch__core {
@@ -255,7 +255,7 @@ input{
   font-size: 12px;
   border-color: #282e3a;
 }
- 
+
 .el-input-number__decrease,.el-input-number__increase{
   border-color:#333 !important;
 }
